--- a/cv.css
+++ b/cv.css
@@ -7,3 +7,21 @@ h2{
     display: flex;
   justify-content: center;
   }
+.css1{
+  width: 60px;
+  height: 60px;
+
+}
+p{
+  display: flex;
+  justify-content:center;
+  align-items:center;
+}
+button{
+  background:lightpink;
+  width: 50PX;
+  height: 50PX;
+}
+button:focus {
+  background:rgb(126, 192, 88);
+}
